--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,6 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>The Local Experience</title>
+    <base href="/">
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
